--- a/Latex/thesis_latex/thesis.bib
+++ b/Latex/thesis_latex/thesis.bib
@@ -11,3 +11,153 @@
   year={2010},
   publisher={Cambridge university press}
 }
+
+@article{Schuld2014,
+archivePrefix = {arXiv},
+arxivId = {1412.3646},
+author = {Schuld, Maria and Sinayskiy, Ilya and Petruccione, Francesco},
+doi = {10.1007/978-3-319-13560-1},
+eprint = {1412.3646},
+file = {:home/mark/QML{\_}Thesis/Paper/Publ{\_}Quantum Computing for Pattern Classification.pdf:pdf},
+isbn = {978-3-319-13559-5},
+issn = {16113349},
+keywords = {artificial,intelligence,machine learning,quantum computing,quantum machine learning},
+mendeley-groups = {QML Thesis},
+pages = {14},
+title = {{Quantum computing for pattern classification}},
+url = {http://arxiv.org/abs/1412.3646},
+year = {2014}
+}
+
+
+@article{acharya2015integrated,
+  title={An integrated index for detection of sudden cardiac death using discrete wavelet transform and nonlinear features},
+  author={Acharya, U Rajendra and Fujita, Hamido and Sudarshan, Vidya K and Sree, Vinitha S and Eugene, Lim Wei Jie and Ghista, Dhanjoo N and San Tan, Ru},
+  journal={Knowledge-Based Systems},
+  volume={83},
+  pages={149--158},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@misc{bigdata,
+author={IBM},
+title = {What is big data?},
+howpublished = {\url{https://www-01.ibm.com/software/data/bigdata/what-is-big-data.html}},
+note = {Accessed: 2016-09-08},
+year={2016}
+}
+
+@misc{dwave2,
+author={D-Wave},
+title = {Breaking through 1000 Qubits },
+howpublished = {\url{http://www.dwavesys.com/blog/2015/06/breaking-through-1000-qubits}},
+note = {Accessed: 2016-09-09},
+year={2015}
+}
+
+
+@article{shor1994,
+  title={Polynomial-Time Algorithm For Prime Factorization And Discrete Logarithms On A Quantum Computer: Proc},
+  author={Shor, Peter W},
+  booktitle={35th Annual Symp. on the Foundations of Computer Science},
+  pages={124},
+  year={1994}
+}
+
+@article{HHL2009,
+archivePrefix = {arXiv},
+arxivId = {arXiv:0811.3171v3},
+author = {Harrow, Aram W. and Hassidim, Avinatan and Lloyd, Seth},
+doi = {10.1103/PhysRevLett.103.150502},
+eprint = {arXiv:0811.3171v3},
+file = {:home/mark/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Harrow, Hassidim, Lloyd - 2009 - Quantum algorithm for linear systems of equations.pdf:pdf},
+issn = {00319007},
+journal = {Physical Review Letters},
+mendeley-groups = {QML Thesis},
+number = {15},
+pages = {1--4},
+pmid = {19905613},
+title = {{Quantum algorithm for linear systems of equations}},
+volume = {103},
+year = {2009}
+}
+@article{qRAM,
+  title={Quantum random access memory},
+  author={Giovannetti, Vittorio and Lloyd, Seth and Maccone, Lorenzo},
+  journal={Physical review letters},
+  volume={100},
+  number={16},
+  pages={160501},
+  year={2008},
+  publisher={APS}
+}
+
+@article{hydrogensimulation,
+  title = {Scalable Quantum Simulation of Molecular Energies},
+  author = {O'Malley, P. J. J. and Babbush, R. and Kivlichan, I. D. and Romero, J. and McClean, J. R. and Barends, R. and Kelly, J. and Roushan, P. and Tranter, A. and Ding, N. and Campbell, B. and Chen, Y. and Chen, Z. and Chiaro, B. and Dunsworth, A. and Fowler, A. G. and Jeffrey, E. and Lucero, E. and Megrant, A. and Mutus, J. Y. and Neeley, M. and Neill, C. and Quintana, C. and Sank, D. and Vainsencher, A. and Wenner, J. and White, T. C. and Coveney, P. V. and Love, P. J. and Neven, H. and Aspuru-Guzik, A. and Martinis, J. M.},
+  journal = {Phys. Rev. X},
+  volume = {6},
+  issue = {3},
+  pages = {031007},
+  numpages = {13},
+  year = {2016},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevX.6.031007},
+  url = {http://link.aps.org/doi/10.1103/PhysRevX.6.031007}
+}
+
+@article{Cai2015,
+archivePrefix = {arXiv},
+arxivId = {1409.7770},
+author = {Cai, X. D. and Wu, D. and Su, Z. E. and Chen, M. C. and Wang, X. L. and Li, Li and Liu, N. L. and Lu, C. Y. and Pan, J. W.},
+doi = {10.1103/PhysRevLett.114.110504},
+eprint = {1409.7770},
+file = {:home/mark/QML{\_}Thesis/Paper/Cai 14 Entanglement-Based Quantum Machine Learning.pdf:pdf},
+isbn = {0031-9007},
+issn = {10797114},
+journal = {Physical Review Letters},
+number = {11},
+pages = {1--5},
+pmid = {25839250},
+title = {{Entanglement-based machine learning on a quantum computer}},
+volume = {114},
+year = {2015}
+}
+@article{Li2015,
+archivePrefix = {arXiv},
+arxivId = {1410.1054},
+author = {Li, Zhaokai and Liu, Xiaomei and Xu, Nanyang and Du, Jiangfeng},
+doi = {10.1103/PhysRevLett.114.140504},
+eprint = {1410.1054},
+file = {:home/mark/QML{\_}Thesis/Paper/Li 14 Experimental Realization of a Quantum SVM.pdf:pdf},
+isbn = {0031-9007},
+issn = {10797114},
+journal = {Physical Review Letters},
+number = {14},
+pages = {1--5},
+pmid = {25910101},
+title = {{Experimental realization of a quantum support vector machine}},
+volume = {114},
+year = {2015}
+}
+@article{Riste2015,
+archivePrefix = {arXiv},
+arxivId = {1512.06069},
+author = {Rist{\`{e}}, D. and da Silva, Marcus P. and Ryan, Colm A. and Cross, Andrew W. and Smolin, John A. and Gambetta, Jay M. and Chow, Jerry M. and Johnson, Blake R.},
+eprint = {1512.06069},
+file = {:home/mark/QML{\_}Thesis/Paper/Riste 15 Demonstration of quantum advantage in machine learning.pdf:pdf},
+journal = {arXiv:1512.06069},
+pages = {1--12},
+title = {{Demonstration of quantum advantage in machine learning}},
+url = {http://arxiv.org/abs/1512.06069},
+year = {2015}
+}
+
+@book{bekkerman2011scaling,
+  title={Scaling up machine learning: Parallel and distributed approaches},
+  author={Bekkerman, Ron and Bilenko, Mikhail and Langford, John},
+  year={2011},
+  publisher={Cambridge University Press}
+}
