literature review 85% done / alg complexity added to theory section

--- a/Latex/thesis_latex/thesis.bib
+++ b/Latex/thesis_latex/thesis.bib
@@ -161,3 +161,50 @@ year = {2015}
   year={2011},
   publisher={Cambridge University Press}
 }
+
+@article{Trugenberger2001,
+archivePrefix = {arXiv},
+arxivId = {quant-ph/0012100},
+author = {Trugenberger, C.},
+doi = {10.1103/PhysRevLett.87.067901},
+eprint = {0012100},
+file = {:home/mark/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Trugenberger - 2001 - Probabilistic Quantum Memories.pdf:pdf},
+issn = {0031-9007},
+journal = {Physical Review Letters},
+mendeley-groups = {QML Thesis},
+number = {6},
+pages = {067901},
+pmid = {11497863},
+primaryClass = {quant-ph},
+title = {{Probabilistic Quantum Memories}},
+url = {http://arxiv.org/abs/quant-ph/0012100},
+volume = {87},
+year = {2001}
+}
+
+@article{Grover2002,
+archivePrefix = {arXiv},
+arxivId = {quant-ph/0208112},
+author = {Grover, Lov K and Rudolph, Terry},
+eprint = {0208112},
+file = {:home/mark/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Grover, Rudolph - 2002 - Creating superpositions that correspond to efficiently integrable probability distributions.pdf:pdf},
+journal = {Arxiv preprint},
+keywords = {Quantum Physics},
+mendeley-groups = {QML Thesis},
+pages = {2},
+primaryClass = {quant-ph},
+title = {{Creating superpositions that correspond to efficiently integrable probability distributions}},
+url = {http://arxiv.org/abs/quant-ph/0208112},
+year = {2002}
+}
+
+@article{soklakov2006efficient,
+  title={Efficient state preparation for a register of quantum bits},
+  author={Soklakov, Andrei N and Schack, R{\"u}diger},
+  journal={Physical Review A},
+  volume={73},
+  number={1},
+  pages={012307},
+  year={2006},
+  publisher={APS}
+}
