literature review 90% done

--- a/Latex/thesis_latex/thesis.bib
+++ b/Latex/thesis_latex/thesis.bib
@@ -208,3 +208,27 @@ year = {2002}
   year={2006},
   publisher={APS}
 }
+
+@book{levitin2003introduction,
+  title={Introduction to the design \& analysis of algorithms},
+  author={Levitin, Anany and Mukherjee, Soumen},
+  year={2003},
+  publisher={Addison-Wesley Reading, MA}
+}
+
+@book{bachmann1894analytische,
+  title={Die analytische zahlentheorie},
+  author={Bachmann, Paul},
+  volume={2},
+  year={1894},
+  publisher={Teubner}
+}
+
+@online{liquid,
+  author = {Microsoft Research,},
+  title = {{Language-Integrated Quantum Operations: LIQUi|>}},
+  year = 2016,
+  url = {https://www.microsoft.com/en-us/research/project/language-integrated-quantum-operations-liqui/},
+  urldate = {2016-12-29}
+}
+
