results & discussion started

--- a/Latex/thesis_latex/thesis.bib
+++ b/Latex/thesis_latex/thesis.bib
@@ -40,14 +40,6 @@ year = {2014}
   publisher={Elsevier}
 }
 
-@misc{bigdata,
-author={IBM},
-title = {What is big data?},
-howpublished = {\url{https://www-01.ibm.com/software/data/bigdata/what-is-big-data.html}},
-note = {Accessed: 2016-09-08},
-year={2016}
-}
-
 @misc{dwave2,
 author={D-Wave},
 title = {Breaking through 1000 Qubits },
@@ -231,4 +223,29 @@ year = {2002}
   url = {https://www.microsoft.com/en-us/research/project/language-integrated-quantum-operations-liqui/},
   urldate = {2016-12-29}
 }
+
+@online{ibmgatetimes,
+  author = {Lev Bishop},
+  title = {{Quantum gate times on IBM quantum computer}},
+  year = 2016,
+  url = {https://quantumexperience.ng.bluemix.net/qstage/#/community/question?questionId=71b344418d724f8ec1088bafc75eb334&answerId=3a2f15c989b2aa752f563cfaf53ae240},
+  urldate = {2016-12-29}
+}
+
+@online{ibmquantumcomputer,
+  author = {IBM},
+  title = {{The IBM Quantum Experience}},
+  year = 2016,
+  url = {http://www.research.ibm.com/quantum/},
+  urldate = {2016-12-29}
+}
+
+@online{bigdata,
+  author = {IBM},
+  title = {{What is big data?}},
+  year = 2016,
+  url = {https://www-01.ibm.com/software/data/bigdata/what-is-big-data.html},
+  urldate = {2016-09-08}
+}
+
 
