--- a/Latex/thesis_latex/thesis.tex
+++ b/Latex/thesis_latex/thesis.tex
@@ -15,6 +15,14 @@
 \usepackage{apacite}
 \usepackage{array}
 \usepackage{float}
+\usepackage{xcolor,colortbl}
+\definecolor{red1}{rgb}{255,0,0}
+\definecolor{red2}{rgb}{178,0,0}
+\definecolor{red3}{rgb}{127,0,0}
+\definecolor{blue1}{rgb}{0.1,0.1,0.1}
+\definecolor{blue2}{rgb}{0.1,0.1,0.1}
+\definecolor{blue3}{rgb}{0.1,0.1,0.1}
+
 \usepackage{siunitx} %for SI units
 \usepackage{tcolorbox}
 \newtcolorbox{redbox}{colback=red!5!white,colframe=red!75!black}
@@ -80,19 +88,19 @@ Implementing a quantum k-nearest neighbour algorithm}
 \pagenumbering{arabic}				% Begin arabic page numbering (1,2,...)
 
 \input{chapters/introduction}
-\cleardoublepage
+%\cleardoublepage
 \input{chapters/theoreticalfoundations}
-\cleardoublepage
+%\cleardoublepage
 \input{chapters/methods}
-\cleardoublepage
+%\cleardoublepage
 \input{chapters/quantummachinelearning}
-\cleardoublepage
+%\cleardoublepage
 \input{chapters/resultsanddiscussion}
-\cleardoublepage
+%\cleardoublepage
 \input{chapters/outlook}
-\cleardoublepage
+%\cleardoublepage
 \input{chapters/conclusion}
-\cleardoublepage
+%\cleardoublepage
 \input{chapters/personalreflection}
 %\cleardoublepage
 %\input{chapters/howto}
