--- a/Latex/thesis_latex/thesis.tex
+++ b/Latex/thesis_latex/thesis.tex
@@ -16,12 +16,12 @@
 \usepackage{array}
 \usepackage{float}
 \usepackage{xcolor,colortbl}
-\definecolor{red1}{rgb}{255,0,0}
-\definecolor{red2}{rgb}{178,0,0}
-\definecolor{red3}{rgb}{127,0,0}
-\definecolor{blue1}{rgb}{0.1,0.1,0.1}
-\definecolor{blue2}{rgb}{0.1,0.1,0.1}
-\definecolor{blue3}{rgb}{0.1,0.1,0.1}
+\definecolor{red1}{HTML}{FF0000}
+\definecolor{red2}{HTML}{B20000}
+\definecolor{red3}{HTML}{7F0000}
+\definecolor{blue1}{HTML}{0000FF}
+\definecolor{blue2}{HTML}{0000B5}
+\definecolor{blue3}{HTML}{000080}
 
 \usepackage{siunitx} %for SI units
 \usepackage{tcolorbox}
