qubitKNN results & discussion

--- a/Latex/thesis_latex/thesis.tex
+++ b/Latex/thesis_latex/thesis.tex
@@ -22,6 +22,11 @@
 \definecolor{blue1}{HTML}{0000FF}
 \definecolor{blue2}{HTML}{0000B5}
 \definecolor{blue3}{HTML}{000080}
+\definecolor{inputblue1}{HTML}{0000CC}
+\definecolor{inputmixblue2}{HTML}{002DF7}
+\definecolor{inputred1}{HTML}{970000}
+\definecolor{inputmixred2}{HTML}{DF3100}
+\definecolor{examplered}{HTML}{FF3122}
 
 \usepackage{siunitx} %for SI units
 \usepackage{tcolorbox}
