amplitudeKNN alg results & discussion

--- a/Latex/thesis_latex/thesis.bib
+++ b/Latex/thesis_latex/thesis.bib
@@ -248,4 +248,9 @@ year = {2002}
   urldate = {2016-09-08}
 }
 
+@article{SchuldFingerhuth,
+author = {Schuld, Maria and Fingerhuth, Mark and Petruccione, Francesco},
+title = {{Amplitude-based quantum k-nearest neighbour algorithm. Manuscript in preparation.}},
+year = {2016}
+}
 
