--- a/Latex/thesis_latex/thesis.bib
+++ b/Latex/thesis_latex/thesis.bib
@@ -1,5 +1,5 @@
 @article{shende2008cnot,
-  title={On the CNOT-cost of TOFFOLI gates},
+  title={{On the CNOT-cost of Toffoli gates}},
   author={Shende, Vivek V and Markov, Igor L},
   journal={arXiv preprint arXiv:0803.2316},
   year={2008}
@@ -42,20 +42,22 @@ year = {2014}
 
 @misc{dwave2,
 author={D-Wave},
-title = {Breaking through 1000 Qubits },
+title = {{Breaking through 1000 Qubits}},
 howpublished = {\url{http://www.dwavesys.com/blog/2015/06/breaking-through-1000-qubits}},
 note = {Accessed: 2016-09-09},
 year={2015}
 }
 
 
-@article{shor1994,
-  title={Polynomial-Time Algorithm For Prime Factorization And Discrete Logarithms On A Quantum Computer: Proc},
+@inproceedings{shor1994,
+  title={{Algorithms for quantum computation: Discrete logarithms and factoring}},
   author={Shor, Peter W},
-  booktitle={35th Annual Symp. on the Foundations of Computer Science},
-  pages={124},
-  year={1994}
+  booktitle={Foundations of Computer Science, 1994 Proceedings., 35th Annual Symposium on},
+  pages={124--134},
+  year={1994},
+  organization={IEEE}
 }
+
 
 @article{HHL2009,
 archivePrefix = {arXiv},
@@ -75,7 +77,7 @@ volume = {103},
 year = {2009}
 }
 @article{qRAM,
-  title={Quantum random access memory},
+  title={{Quantum random access memory}},
   author={Giovannetti, Vittorio and Lloyd, Seth and Maccone, Lorenzo},
   journal={Physical review letters},
   volume={100},
@@ -86,7 +88,7 @@ year = {2009}
 }
 
 @article{hydrogensimulation,
-  title = {Scalable Quantum Simulation of Molecular Energies},
+  title = {{Scalable Quantum Simulation of Molecular Energies}},
   author = {O'Malley, P. J. J. and Babbush, R. and Kivlichan, I. D. and Romero, J. and McClean, J. R. and Barends, R. and Kelly, J. and Roushan, P. and Tranter, A. and Ding, N. and Campbell, B. and Chen, Y. and Chen, Z. and Chiaro, B. and Dunsworth, A. and Fowler, A. G. and Jeffrey, E. and Lucero, E. and Megrant, A. and Mutus, J. Y. and Neeley, M. and Neill, C. and Quintana, C. and Sank, D. and Vainsencher, A. and Wenner, J. and White, T. C. and Coveney, P. V. and Love, P. J. and Neven, H. and Aspuru-Guzik, A. and Martinis, J. M.},
   journal = {Phys. Rev. X},
   volume = {6},
@@ -148,7 +150,7 @@ year = {2015}
 }
 
 @book{bekkerman2011scaling,
-  title={Scaling up machine learning: Parallel and distributed approaches},
+  title={{Scaling up machine learning: Parallel and distributed approaches}},
   author={Bekkerman, Ron and Bilenko, Mikhail and Langford, John},
   year={2011},
   publisher={Cambridge University Press}
@@ -209,7 +211,7 @@ year = {2002}
 }
 
 @book{bachmann1894analytische,
-  title={Die analytische zahlentheorie},
+  title={{Die analytische Zahlentheorie}},
   author={Bachmann, Paul},
   volume={2},
   year={1894},
@@ -253,4 +255,20 @@ author = {Schuld, Maria and Fingerhuth, Mark and Petruccione, Francesco},
 title = {{Amplitude-based quantum k-nearest neighbour algorithm. Manuscript in preparation.}},
 year = {2016}
 }
+
+@article{dawson2005solovay,
+  title={{The Solovay-Kitaev algorithm}},
+  author={Dawson, Christopher M and Nielsen, Michael A},
+  journal={arXiv preprint quant-ph/0505030},
+  year={2005}
+}
+
+@article{booth2012quantum,
+  title={Quantum compiler optimizations},
+  author={Booth Jr, Jeffrey},
+  journal={arXiv preprint arXiv:1206.3348},
+  year={2012}
+}
+
+
 
