working on amplitudeKNN results&discussion

--- a/Latex/thesis_latex/thesis.tex
+++ b/Latex/thesis_latex/thesis.tex
@@ -23,13 +23,22 @@
 \definecolor{red1}{HTML}{FF0000}
 \definecolor{red2}{HTML}{B20000}
 \definecolor{red3}{HTML}{7F0000}
+\definecolor{red4}{HTML}{FF3217}
+\definecolor{red5}{HTML}{FF0D48}
 \definecolor{blue1}{HTML}{0000FF}
 \definecolor{blue2}{HTML}{0000B5}
 \definecolor{blue3}{HTML}{000080}
+\definecolor{blue4}{HTML}{3C00FF}
+\definecolor{blue5}{HTML}{3C5DFF}
 \definecolor{inputblue1}{HTML}{0000CC}
 \definecolor{inputmixblue2}{HTML}{002DF7}
+\definecolor{inputmixblue3}{HTML}{3C8BFF}
+\definecolor{inputmixblue4}{HTML}{6730A8}
 \definecolor{inputred1}{HTML}{970000}
 \definecolor{inputmixred2}{HTML}{DF3100}
+\definecolor{inputmixred3}{HTML}{C43335}
+\definecolor{inputmixred4}{HTML}{DE366C}
+
 \definecolor{examplered}{HTML}{FF3122}
 
 \usepackage{siunitx} %for SI units
