--- a/Latex/thesis_latex/thesis.bib
+++ b/Latex/thesis_latex/thesis.bib
@@ -270,5 +270,15 @@ year = {2016}
   year={2012}
 }
 
+@article{kitaev1997quantum,
+  title={Quantum computations: algorithms and error correction},
+  author={Kitaev, A Yu},
+  journal={Russian Mathematical Surveys},
+  volume={52},
+  number={6},
+  pages={1191--1249},
+  year={1997},
+  publisher={Turpion Ltd}
+}
 
 
