qubitKNN results added

--- a/Latex/thesis_latex/thesis.tex
+++ b/Latex/thesis_latex/thesis.tex
@@ -19,6 +19,7 @@
 \usepackage{fancyvrb}
 \usepackage{float}
 \usepackage{pgfplots} %for plotting
+\pgfplotsset{compat=1.3}
 \usepackage{xcolor,colortbl}
 \definecolor{red1}{HTML}{FF0000}
 \definecolor{red2}{HTML}{B20000}
@@ -117,21 +118,21 @@ Implementing a quantum k-nearest neighbour algorithm}
 \pagestyle{fancy}               	% Fancy headings
 \pagenumbering{arabic}				% Begin arabic page numbering (1,2,...)
 
-\input{chapters/introduction}
+%\input{chapters/introduction}
 %\cleardoublepage
-\input{chapters/theoreticalfoundations}
+%\input{chapters/theoreticalfoundations}
 %\cleardoublepage
-\input{chapters/methods}
+%\input{chapters/methods}
 %\cleardoublepage
-\input{chapters/quantummachinelearning}
+%\input{chapters/quantummachinelearning}
 %\cleardoublepage
 \input{chapters/resultsanddiscussion}
 %\cleardoublepage
-\input{chapters/outlook}
+%\input{chapters/outlook}
 %\cleardoublepage
-\input{chapters/conclusion}
+%\input{chapters/conclusion}
 %\cleardoublepage
-\input{chapters/personalreflection}
+%\input{chapters/personalreflection}
 %\cleardoublepage
 %\input{chapters/howto}
 %\cleardoublepage
