4:30 big make over

--- a/Latex/thesis_latex/thesis.bib
+++ b/Latex/thesis_latex/thesis.bib
@@ -218,8 +218,8 @@ year = {2002}
   publisher={Teubner}
 }
 
-@online{liquid,
-  author = {Microsoft Research,},
+@online{microsoftresearch,
+  author = {{Microsoft Research},},
   title = {{Language-Integrated Quantum Operations: LIQUi|>}},
   year = 2016,
   url = {https://www.microsoft.com/en-us/research/project/language-integrated-quantum-operations-liqui/},
@@ -270,15 +270,31 @@ year = {2016}
   year={2012}
 }
 
-@article{kitaev1997quantum,
-  title={Quantum computations: algorithms and error correction},
+@article{kitaev1995quantum,
+  title={Quantum measurements and the Abelian stabilizer problem},
   author={Kitaev, A Yu},
-  journal={Russian Mathematical Surveys},
-  volume={52},
-  number={6},
-  pages={1191--1249},
-  year={1997},
-  publisher={Turpion Ltd}
+  journal={arXiv preprint quant-ph/9511026},
+  year={1995}
 }
 
+@misc{liquid,
+  author = {Dave Wecker and Krysta M.~Svore},
+  title = {{LIQU}i|>: {A} {S}oftware {D}esign {A}rchitecture and {D}omain-{S}pecific 
+            {L}anguage for {Q}uantum {C}omputing},
+  year = {2014},
+  eprint = {1402.4467},
+  url = {arXiv:1402.4467v1}
+}
+
+
+@article{domingos2012few,
+  title={A few useful things to know about machine learning},
+  author={Domingos, Pedro},
+  journal={Communications of the ACM},
+  volume={55},
+  number={10},
+  pages={78--87},
+  year={2012},
+  publisher={ACM}
+}
 
