--- a/Latex/thesis_latex/thesis.tex
+++ b/Latex/thesis_latex/thesis.tex
@@ -118,21 +118,21 @@ Implementing a quantum k-nearest neighbour algorithm}
 \pagestyle{fancy}               	% Fancy headings
 \pagenumbering{arabic}				% Begin arabic page numbering (1,2,...)
 
-%\input{chapters/introduction}
+\input{chapters/introduction}
 %\cleardoublepage
-%\input{chapters/theoreticalfoundations}
+\input{chapters/theoreticalfoundations}
 %\cleardoublepage
-%\input{chapters/methods}
+\input{chapters/methods}
 %\cleardoublepage
-%\input{chapters/quantummachinelearning}
+\input{chapters/quantummachinelearning}
 %\cleardoublepage
 \input{chapters/resultsanddiscussion}
 %\cleardoublepage
-%\input{chapters/outlook}
+\input{chapters/outlook}
 %\cleardoublepage
-%\input{chapters/conclusion}
+\input{chapters/conclusion}
 %\cleardoublepage
-%\input{chapters/personalreflection}
+\input{chapters/personalreflection}
 %\cleardoublepage
 %\input{chapters/howto}
 %\cleardoublepage
