5:49 many things edited and added

--- a/Latex/thesis_latex/thesis.bib
+++ b/Latex/thesis_latex/thesis.bib
@@ -298,3 +298,25 @@ year = {2016}
   publisher={ACM}
 }
 
+@article{hamming1950error,
+  title={Error detecting and error correcting codes},
+  author={Hamming, Richard W},
+  journal={Bell System technical journal},
+  volume={29},
+  number={2},
+  pages={147--160},
+  year={1950},
+  publisher={Wiley Online Library}
+}
+
+@article{las2016genetic,
+  title={Genetic Algorithms for Digital Quantum Simulations},
+  author={Las Heras, U and Alvarez-Rodriguez, U and Solano, E and Sanz, M},
+  journal={Physical Review Letters},
+  volume={116},
+  number={23},
+  pages={230504},
+  year={2016},
+  publisher={APS}
+}
+
