acknowledgements, preface and 50% of personal reflection

--- a/Latex/thesis_latex/thesis.tex
+++ b/Latex/thesis_latex/thesis.tex
@@ -84,7 +84,7 @@
 
 
 % Title page (please fill in)___________________________________________________
-\title{Quantum-enhanced machine learning:
+\title{DRAFT:\\Quantum-enhanced machine learning:
 Implementing a quantum k-nearest neighbour algorithm}
 
 
