cubes and hellinger distance added

--- a/Latex/thesis_latex/thesis.bib
+++ b/Latex/thesis_latex/thesis.bib
@@ -320,3 +320,13 @@ year = {2016}
   publisher={APS}
 }
 
+@article{hellinger1909neue,
+  title={{Neue Begr{\"u}ndung der Theorie quadratischer Formen von unendlichvielen Ver{\"a}nderlichen.}},
+  author={Hellinger, Ernst},
+  journal={Journal f{\"u}r die reine und angewandte Mathematik},
+  volume={136},
+  pages={210--271},
+  year={1909}
+}
+
+
