--- a/Latex/thesis_latex/thesis.bib
+++ b/Latex/thesis_latex/thesis.bib
@@ -336,3 +336,11 @@ year = {2016}
   url = {http://www.tcs.tifr.res.in/~prahladh/teaching/2011-12/comm/lectures/l12.pdf},
   urldate = {2017-01-06}
 }
+
+@online{ibmquasm2.0,
+  author = {Gambetta, Jay},
+  title = {{Working towards QASM 2.0}},
+  year = 2016,
+  url = {https://quantumexperience.ng.bluemix.net/qstage/#/community/question?questionId=52a9bcb45e9f21d27c29f6fec29af057},
+  urldate = {2017-01-07}
+}
