feedback review: q logic gates

--- a/Latex/thesis_latex/thesis.bib
+++ b/Latex/thesis_latex/thesis.bib
@@ -344,3 +344,59 @@ year = {2016}
   url = {https://quantumexperience.ng.bluemix.net/qstage/#/community/question?questionId=52a9bcb45e9f21d27c29f6fec29af057},
   urldate = {2017-01-07}
 }
+
+@inproceedings{graves2013speech,
+  title={Speech recognition with deep recurrent neural networks},
+  author={Graves, Alex and Mohamed, Abdel-rahman and Hinton, Geoffrey},
+  booktitle={2013 IEEE international conference on acoustics, speech and signal processing},
+  pages={6645--6649},
+  year={2013},
+  organization={IEEE}
+}
+
+@article{linden2003amazon,
+  title={{Amazon.com recommendations: Item-to-item collaborative filtering}},
+  author={Linden, Greg and Smith, Brent and York, Jeremy},
+  journal={IEEE Internet computing},
+  volume={7},
+  number={1},
+  pages={76--80},
+  year={2003},
+  publisher={IEEE}
+}
+
+@article{kieu2006quantum,
+  title={Quantum adiabatic computation and the travelling salesman problem},
+  author={Kieu, Tien D},
+  journal={arXiv preprint quant-ph/0601151},
+  year={2006}
+}
+
+@inproceedings{dirac1939new,
+  title={A new notation for quantum mechanics},
+  author={Dirac, Paul AM},
+  booktitle={Mathematical Proceedings of the Cambridge Philosophical Society},
+  volume={35},
+  number={03},
+  pages={416--418},
+  year={1939},
+  organization={Cambridge Univ Press}
+}
+
+@online{chuanglecturenotes,
+  author = {Chuang, Isaac},
+  title = {{Lecture 19: How to Build Your Own Quantum Computer}},
+  year = 2003,
+  url = {https://ocw.mit.edu/courses/mathematics/18-435j-quantum-computation-fall-2003/lecture-notes/qc_lec19.pdf},
+  urldate = {2017-01-07}
+}
+
+@article{born1954statistical,
+  title={The statistical interpretation of quantum mechanics},
+  author={Born, Max},
+  journal={Nobel Lecture},
+  volume={11},
+  pages={1942--1962},
+  year={1954}
+}
+
