--- a/Latex/thesis_latex/thesis.tex
+++ b/Latex/thesis_latex/thesis.tex
@@ -127,7 +127,8 @@
 \usepackage[english,bt]{ethidsc} % Special IDSC styles and commands      
 								 % {german}/english: language of headings, etc.
 								 % {st}/bt/mt: {semester}/bachelor/master thesis
-							
+\renewcommand{\chaptername}{Section}
+
 % Page header (don't change)____________________________________________________
 \setlength{\parindent}{0em}                 % Disable parindent
 \rhead[\nouppercase{\rightmark}]{\thepage}  % Special headings
