review: qml start

--- a/Latex/thesis_latex/thesis.bib
+++ b/Latex/thesis_latex/thesis.bib
@@ -400,3 +400,28 @@ year = {2016}
   year={1954}
 }
 
+
+@online{chinasupercomputer,
+  author = {Feldman, Michael},
+  title = {{China Tops Supercomputer Rankings with New 93-Petaflop Machine}},
+  year = 2016,
+  url = {https://www.top500.org/news/china-tops-supercomputer-rankings-with-new-93-petaflop-machine/},
+  urldate = {2017-01-07}
+}
+
+@article{altepeter649quantum,
+  title={Quantum state tomography},
+  author={Altepeter, JB and James, DFV and Kwiat, PG},
+  journal={Quantum State Estimation-Lecture Notes in Physics},
+  volume={649},
+  pages={113--146}
+}
+
+@online{ibmqetomo,
+  author = {Mckay, David},
+  title = {{Bloch Measurement and Entangled States}},
+  year = 2016,
+  url = {https://quantumexperience.ng.bluemix.net/qstage/#/community/question?questionId=bdfd3c7b68cd1905cc875bd7409b2b97&answerId=f34ed6d1dd90695f503823a3ab6b9a98},
+  urldate = {2017-01-07}
+}
+
