results & discussion: qubitKNN

--- a/Latex/thesis_latex/thesis.bib
+++ b/Latex/thesis_latex/thesis.bib
@@ -425,3 +425,70 @@ year = {2016}
   urldate = {2017-01-07}
 }
 
+@inproceedings{aimeur2006machine,
+  title={Machine learning in a quantum world},
+  author={A{\"\i}meur, Esma and Brassard, Gilles and Gambs, S{\'e}bastien},
+  booktitle={Conference of the Canadian Society for Computational Studies of Intelligence},
+  pages={431--442},
+  year={2006},
+  organization={Springer}
+}
+
+@article{carrasquilla2016machine,
+  title={Machine learning phases of matter},
+  author={Carrasquilla, Juan and Melko, Roger G},
+  journal={arXiv preprint arXiv:1605.01735},
+  year={2016}
+}
+
+@article{ventura2000quantum,
+  title={Quantum associative memory},
+  author={Ventura, Dan and Martinez, Tony},
+  journal={Information Sciences},
+  volume={124},
+  number={1},
+  pages={273--296},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@book{lambropoulos2007fundamentals,
+  title={Fundamentals of quantum optics and quantum information},
+  author={Lambropoulos, Peter and Petrosyan, David},
+  year={2007},
+  publisher={Springer}
+}
+
+@article{clarke2008superconducting,
+  title={Superconducting quantum bits},
+  author={Clarke, John and Wilhelm, Frank K},
+  journal={Nature},
+  volume={453},
+  number={7198},
+  pages={1031--1042},
+  year={2008},
+  publisher={Nature Publishing Group}
+}
+
+@article{haffner2008quantum,
+  title={Quantum computing with trapped ions},
+  author={H{\"a}ffner, Hartmut and Roos, Christian F and Blatt, Rainer},
+  journal={Physics reports},
+  volume={469},
+  number={4},
+  pages={155--203},
+  year={2008},
+  publisher={Elsevier}
+}
+@article{o2007optical,
+  title={Optical quantum computing},
+  author={O'Brien, Jeremy L},
+  journal={Science},
+  volume={318},
+  number={5856},
+  pages={1567--1570},
+  year={2007},
+  publisher={American Association for the Advancement of Science}
+}
+
+
