review done, spelling result&disc checked

--- a/Latex/thesis_latex/thesis.bib
+++ b/Latex/thesis_latex/thesis.bib
@@ -253,7 +253,7 @@ year = {2002}
 @article{SchuldFingerhuth,
 author = {Schuld, Maria and Fingerhuth, Mark and Petruccione, Francesco},
 title = {{Amplitude-based quantum k-nearest neighbour algorithm. Manuscript in preparation.}},
-year = {2016}
+year = {Manuscript in preparation}
 }
 
 @article{dawson2005solovay,
@@ -489,6 +489,13 @@ year = {2016}
   pages={1567--1570},
   year={2007},
   publisher={American Association for the Advancement of Science}
+}
+
+@article{chandrashekar2010discrete,
+  title={Discrete-time quantum walk-dynamics and applications},
+  author={Chandrashekar, CM},
+  journal={arXiv preprint arXiv:1001.5326},
+  year={2010}
 }
 
 
