all section spellchecked

--- a/Latex/thesis_latex/thesis.tex
+++ b/Latex/thesis_latex/thesis.tex
@@ -143,7 +143,7 @@
 
 
 % Title page (please fill in)___________________________________________________
-\title{DRAFT:\\Quantum-enhanced machine learning:
+\title{Quantum-enhanced machine learning:
 Implementing a quantum k-nearest neighbour algorithm}
 
 
