--- a/Latex/thesis_latex/thesis.bib
+++ b/Latex/thesis_latex/thesis.bib
@@ -498,4 +498,74 @@ year = {Manuscript in preparation}
   year={2010}
 }
 
+@article{anguita2003quantum,
+  title={Quantum optimization for training support vector machines},
+  author={Anguita, Davide and Ridella, Sandro and Rivieccio, Fabio and Zunino, Rodolfo},
+  journal={Neural Networks},
+  volume={16},
+  number={5},
+  pages={763--770},
+  year={2003},
+  publisher={Elsevier}
+}
+@inproceedings{kapoor2016quantum,
+  title={Quantum Perceptron Models},
+  author={Kapoor, Ashish and Wiebe, Nathan and Svore, Krysta},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={3999--4007},
+  year={2016}
+}
+@article{aimeur2013quantum,
+  title={Quantum speed-up for unsupervised learning},
+  author={A{\"\i}meur, Esma and Brassard, Gilles and Gambs, S{\'e}bastien},
+  journal={Machine Learning},
+  volume={90},
+  number={2},
+  pages={261--287},
+  year={2013},
+  publisher={Springer}
+}
+@article{biamonte2016quantum,
+  title={Quantum Machine Learning},
+  author={Biamonte, Jacob and Wittek, Peter and Pancotti, Nicola and Rebentrost, Patrick and Wiebe, Nathan and Lloyd, Seth},
+  journal={arXiv preprint arXiv:1611.09347},
+  year={2016}
+}
+
+@article{kak1995quantum,
+  title={Quantum neural computing},
+  author={Kak, Subhash C},
+  journal={Advances in Imaging and Electron Physics},
+  volume={94},
+  pages={259--313},
+  year={1995},
+  publisher={Elsevier}
+}
+
+@article{lloyd2013quantum,
+  title={Quantum algorithms for supervised and unsupervised machine learning},
+  author={Lloyd, Seth and Mohseni, Masoud and Rebentrost, Patrick},
+  journal={arXiv preprint arXiv:1307.0411},
+  year={2013}
+}
+
+@article{bishop2006pattern,
+  title={Pattern recognition},
+  author={Bishop, Christopher M},
+  journal={Machine Learning},
+  volume={128},
+  year={2006}
+}
+
+@article{schuld2015introduction,
+  title={An introduction to quantum machine learning},
+  author={Schuld, Maria and Sinayskiy, Ilya and Petruccione, Francesco},
+  journal={Contemporary Physics},
+  volume={56},
+  number={2},
+  pages={172--185},
+  year={2015},
+  publisher={Taylor \& Francis}
+}
+
 
