--- a/Latex/thesis_latex/thesis.bib
+++ b/Latex/thesis_latex/thesis.bib
@@ -568,4 +568,12 @@ year = {Manuscript in preparation}
   publisher={Taylor \& Francis}
 }
 
+@article{cunningham2007k,
+  title={k-Nearest neighbour classifiers},
+  author={Cunningham, Padraig and Delany, Sarah Jane},
+  journal={Multiple Classifier Systems},
+  pages={1--17},
+  year={2007},
+  publisher={Springer}
+}
 
